components/customBlocks/cardBlock.css
.input-editor {
  display: flex;
  align-items: center;
}
.cardBlockInput {
  all: unset;
  cursor: pointer;
  min-width: 35px;
  width: 80%;
  font-weight: bold;
  color: #777;
}
.urlInput:focus {
  font-weight: normal;
}
.input-pencil {
  width: 16px;
  height: 16px;
  margin-right: 10px;
  cursor: pointer;
}

.cardBlockInput:disabled {
  border: none;
  background: white;
  width: 100%;
  border-radius: 10px;
  padding: .5em;
  margin: .2em;
}

.cardContainer {
  display: flex;
  justify-content: center;
}

.cardOnPreview {
  text-align: center;
  width: 100%;
  min-width: 650px;
  background-color: #fff;
  border-radius: 10px;
  box-shadow: 7px 8px 0px rgba(0, 0, 0, 1);
  transition: transform 0.2s;
  cursor: pointer;
  position: relative;
  margin-top: 1.5em;
  /* padding: 10px; */
}

.cardOnPreviewContent {
    /* border: 2px solid black; */
    border-radius: 30px;
    /* padding: 16px; */
    position: relative;
    z-index: 999999999;
}


.cardOnPreview:hover .cardOnPreviewContent{
  transform: translate(4px, 4px); /* Pushes the card down on hover */
}


.cardOnPreviewTitle {
  margin: 0;
  font-size: 16px;
  padding: 13px 16px;
  color: #333;
  position: relative;
  z-index: 1;
  background: white;
  display: block;
  border-radius: 10px;
  border: 2px solid black;
}




.ml-auto {
    margin-left: auto;
  }
  
  .flex {
    display: flex;
  }
  
  .items-center {
    align-items: center;
  }
  .items-right {
    align-items: right;
  }
  
  .justify-end {
    justify-content: end;
  }

  .gap-x-2 {
    gap: 0.5rem;
  }
  
  /* Add other Tailwind classes as needed */
  .opacity-0 {
    opacity: 0.4;
  }
  
  .group-hover\:opacity-100:hover {
    opacity: 1;
  }
  
  .h-full {
    height: 100%;
  }
  
  .rounded-sm {
    border-radius: 0.125rem;
  }
  
  .hover-bg-neutral-300:hover {
    background-color: var(--neutral-300);
  }
  
  .dark\:hover-bg-neutral-600:hover {
    background-color: var(--neutral-600);
  }
  
  .h-4 {
    height: 1rem;
  }
  
  .w-4 {
    width: 1rem;
  }
  
  .text-muted-foreground {
    color: var(--muted-foreground);
  }
  
  .text-xs {
    font-size: 0.75rem;
  }
  
  .w-60 {
    width: 4rem;
  }
  
  .mr-2 {
    margin-right: 0.25rem;
  }

